--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Odin Recipes</title>
 </head>
 <body>
-$END$
+    <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="recipes/pizza.html">Pizza</a></li>
+            <li><a href="recipes/lentilsoup.html">Lentil Soup</a></li>
+        </ul>
+
 </body>
 </html>
