--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -1,10 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Pizza</title>
 </head>
+
 <body>
-$END$
+<a href="../index.html">Home</a>
+  <h1>Pizza Dough Recipe</h1>
+    <img src="img/pizza.jpg" height="380" width="550">
+        <h3>NY Style Pizza at Home</h3>
+            <p>A wonderful recipe for NY Style Pizza Dough</p>
+                <h4>Ingredients</h4>
+                    <h5>The Poolish Day 1</h5>
+                        <ul>
+                            <li>50g Warm water</li>
+                            <li>1g Active dry yeast</li>
+                            <li>50g Bread or AP flour</li>
+                            <li>A pinch of Sugar</li>
+                        </ul>
+                    <h5>Dough Day 2</h5>
+                        <ul>
+                            <li>180g Warm water</li>
+                            <li>4g Active dry yeast</li>
+                            <li>A pinch of Sugar</li>
+                            <li>10g Sugar</li>
+                            <li>315g Bread flour</li>
+                            <li>8g Salt</li>
+                            <li>10g Olive Oil</li>
+                        </ul>
+                <h4>Step by Step instructions</h4>
+                    <h5>The Poolish Day 1</h5>
+                        <ol>
+                            <li>Mix up into a paste like texture</li>
+                            <li>Place in Container, Cover it up</li>
+                            <li>Leave out in Room Temp for 24 hours</li>
+                        </ol>
+                    <h5>Dough Day 2</h5>
+                        <ol>
+                            <li>Add Warm Water and Active Dry Yeast and a pinch of Sugar to a Container Stir it up, let it sit for about 15 minutes</li>
+                            <li>After 15 minutes, you should see bubbled in the water</li>
+                            <li>Add Oil & the Poolish from yesterday, and stir it</li>
+                            <li>Add the Bread Flour, Salt, Sugar and Olive Oil and mix/stir for 10 to 20 minutes</li>
+                            <li>Knead it the dough to make it smooth</li>
+                            <li>Form a big ball</li>
+                            <li>Cover up the Dough Ball with a Container or Bowl and let it ferment for 45 Minutes</li>
+                            <li>Divide it up to about 300G each</li>
+                            <li>Form 2 Dough Balls</li>
+                            <li>Place it in a sealed container that is oiled,  place lid on it, and let it proof in the Fridge for 1 to 5 days</li>
+                            <li>Take the Pizza dough out, and place a damp towel over it while it is in the bowl or container, and let it sit out for about 1 hour or when it reaches room temperature</li>
+                            <li>Form your pizza dough and make a pizza pie!</li>
+                        </ol>
 </body>
 </html>
