Added CSS styling
background color changed to gray, title and links colored in red, adjusted h5 font size and recipes centered.

--- a/recipes/lentilsoup.html
+++ b/recipes/lentilsoup.html
@@ -3,33 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <title>Lentil Soup</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
   <a href="../index.html">Home</a>
-    <h1>Lentil Soup Recipe</h1>
-      <img src="img/lentilsoup.jpg" height="380" width="550">
+    <h1 class="title recipe">Lentil Soup Recipe</h1>
+      <img class="image" src="img/lentilsoup.jpg" height="380" width="550">
         <h3>Recipe for traditional German Lentil Soup</h3>
           <p>Delicious and easy Lentil Soup</p>
             <h4>Ingredients</h4>
-              <ul>
-                <li>2 cans of Lentils</li>
-                <li>8 potatoes</li>
-                <li>4 Mettenden</li>
-                <li>200g of bacon cubes</li>
-                <li>600ml Vegetable broth</li>
-                <li>Salt & Pepper</li>
-              </ul>
+              <div class="container">
+                <ul class="list">
+                  <li>2 cans of Lentils</li>
+                  <li>8 potatoes</li>
+                  <li>4 Mettenden</li>
+                  <li>200g of bacon cubes</li>
+                  <li>600ml Vegetable broth</li>
+                  <li>Salt & Pepper</li>
+                </ul>
+              </div>
             <h4>Step by Step instructions</h4>
-              <ol>
-                <li>Put some oil in a pot on medium heat</li>
-                <li>Add the bacon to the oil and let it fry for 10 minutes without burning it</li>
-                <li>Add canned lentils to the pot</li>
-                <li>Add about half the canned lenthils as veggy broth</li>
-                <li>Add sliced Mett sausages to the soup</li>
-                <li>Let the soup cook for 45 minutes</li>
-                <li>After 45 minutes add potato cubes and let it cook for another 15 minutes</li>
-                <li>At last we can add salt & pepper</li>
-              </ol>
+              <div class="container">
+                <ol class="list">
+                    <li>Put some oil in a pot on medium heat</li>
+                    <li>Add the bacon to the oil and let it fry for 10 minutes without burning it</li>
+                    <li>Add canned lentils to the pot</li>
+                    <li>Add about half the canned lenthils as veggy broth</li>
+                    <li>Add sliced Mett sausages to the soup</li>
+                    <li>Let the soup cook for 45 minutes</li>
+                    <li>After 45 minutes add potato cubes and let it cook for another 15 minutes</li>
+                    <li>At last we can add salt & pepper</li>
+                  </ol>
+              </div>
 
 </body>
 </html>
