--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,70 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <title>Lasagna</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <a href="../index.html">Home</a>
-        <h1>Lasagna Recipe</h1>
-            <img src="img/lasagna.jpg" height="380" width="550">
+        <h1 class="title recipe">Lasagna Recipe</h1>
+            <img class="image" src="img/lasagna.jpg" height="380" width="550">
                 <h3>Recipe for Lasagna Bolognese</h3>
                     <p>A very tasty and easy way to make Lasagna at home</p>
                         <h4>Ingredients for 4 persons</h4>
                             <h5>The Bolognesesauce</h5>
-                                <ul>
-                                    <li>500g mixed minced meat</li>
-                                    <li>1 onion</li>
-                                    <li>2 cloves of garlic</li>
-                                    <li>1 bundle of parsley</li>
-                                    <li>1EL tomato paste</li>
-                                    <li>1 can tomatoes</li>
-                                    <li>some olive oil</li>
-                                    <li>some red wine</li>
-                                </ul>
+                                <div class="container">
+                                    <ul class="list">
+                                        <li>500g mixed minced meat</li>
+                                        <li>1 onion</li>
+                                        <li>2 cloves of garlic</li>
+                                        <li>1 bundle of parsley</li>
+                                        <li>1EL tomato paste</li>
+                                        <li>1 can tomatoes</li>
+                                        <li>some olive oil</li>
+                                        <li>some red wine</li>
+                                     </ul>
+                                </div>
                             <h5>The Bechamelsauce</h5>
-                                <ul>
-                                    <li>500ml milk</li>
-                                    <li>30g butter</li>
-                                    <li>40g flour</li>
-                                    <li>salt & pepper</li>
-                                    <li>lemon juice</li>
-                                    <li>nutmeg</li>
-                                </ul>
+                                <div class="container">
+                                    <ul class="list">
+                                        <li>500ml milk</li>
+                                        <li>30g butter</li>
+                                        <li>40g flour</li>
+                                        <li>salt & pepper</li>
+                                        <li>lemon juice</li>
+                                        <li>nutmeg</li>
+                                    </ul>
+                                </div>
                             <h5>The Lasagna</h5>
-                                <ul>
-                                    <li>Butter for the form</li>
-                                    <li>300g Lasagna pasta plates</li>
-                                    <li>CHEESE</li>
-                                    <li>Butter flakes</li>
-                                </ul>
+                                <div class="container">
+                                    <ul class="list">
+                                        <li>Butter for the form</li>
+                                        <li>300g Lasagna pasta plates</li>
+                                        <li>CHEESE</li>
+                                        <li>Butter flakes</li>
+                                    </ul>
+                                </div>
                         <h4>Step by Step instructions</h4>
                             <h5>For the Bolognesesauce</h5>
-                                <ol>
-                                    <li>Heat the olive oil in a high frying pan</li>
-                                    <li>Fry the minced meat in the pan</li>
-                                    <li>Add sliced onions and parsley to the pan</li>
-                                    <li>Add fine sliced garlic and tomato paste to the mix</li>
-                                    <li>Pour the canned tomatoes and add pepper and salt</li>
-                                    <li>If desired add some red wine at last</li>
-                                    <li>leave it opened for 30 minutes on medium heat</li>
-                                </ol>
+                                <div class="container">
+                                    <ol class="list">
+                                        <li>Heat the olive oil in a high frying pan</li>
+                                        <li>Fry the minced meat in the pan</li>
+                                        <li>Add sliced onions and parsley to the pan</li>
+                                        <li>Add fine sliced garlic and tomato paste to the mix</li>
+                                        <li>Pour the canned tomatoes and add pepper and salt</li>
+                                        <li>If desired add some red wine at last</li>
+                                        <li>leave it opened for 30 minutes on medium heat</li>
+                                    </ol>
+                                </div>
                             <h5>For the Bechamelsauce</h5>
-                                <ol>
-                                    <li>Heat the butter in a small pan</li>
-                                    <li>Mix the flour into the butter until bright yellow without burning it</li>
-                                    <li>Add milk and keep stirring</li>
-                                    <li>Keep the sauce cooking on low heat for 30 minutes</li>
-                                    <li>Finalize the sauce with salt, pepper, lemon juice and nutmeg</li>
-                                </ol>
+                                <div class="container">
+                                    <ol class="list">
+                                        <li>Heat the butter in a small pan</li>
+                                        <li>Mix the flour into the butter until bright yellow without burning it</li>
+                                        <li>Add milk and keep stirring</li>
+                                        <li>Keep the sauce cooking on low heat for 30 minutes</li>
+                                        <li>Finalize the sauce with salt, pepper, lemon juice and nutmeg</li>
+                                    </ol>
+                                </div>
                             <h5>The Lasagna</h5>
-                                <ol>
-                                    <li>Add butter to a form and put a layer of bolognese sauce on the bottom</li>
-                                    <li>Add lasagna pasta plates ontop</li>
-                                    <li>Add a layer of bolognese sauce again</li>
-                                    <li>Add a layer of bechamel sauce</li>
-                                    <li>Repeat steps 2-4 until the form is fully filled</li>
-                                    <li>The last layer should be bechamel sauce</li>
-                                    <li>Last we add a lot of cheese and some butter flakes</li>
-                                    <li>The Lasagna should go 30-40 minutes in the oven at 180 degrees celsius</li>
-                                </ol>
+                                <div class="container">
+                                    <ol class="list">
+                                        <li>Add butter to a form and put a layer of bolognese sauce on the bottom</li>
+                                        <li>Add lasagna pasta plates ontop</li>
+                                        <li>Add a layer of bolognese sauce again</li>
+                                        <li>Add a layer of bechamel sauce</li>
+                                        <li>Repeat steps 2-4 until the form is fully filled</li>
+                                        <li>The last layer should be bechamel sauce</li>
+                                        <li>Last we add a lot of cheese and some butter flakes</li>
+                                        <li>The Lasagna should go 30-40 minutes in the oven at 180 degrees celsius</li>
+                                    </ol>
+                                </div>
+
 </body>
 </html>
