--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
             <li><a href="recipes/pizza.html">Pizza</a></li>
             <li><a href="recipes/lentilsoup.html">Lentil Soup</a></li>
+            <li><a href="recipes/redlentilcurry.html">Red Lentil Curry</a></li>
         </ul>
 
 </body>
