fixed image and made some css styling additions
played around with the box model.

--- a/recipes/redlentilcurry.html
+++ b/recipes/redlentilcurry.html
@@ -10,7 +10,7 @@
 <h1 class="title recipe">Red Lentil Curry Recipe</h1>
 <img class="image" src="img/redlentilcurry.jpg" height="380" width="550">
 <h3>Recipe for Red Lentil Curry</h3>
-<p>Delicious Vegan Red Lentil Curry</p>
+<p>Delicious Vegan Red Lentil Curry recipe</p>
 <h4>Ingredients for 4 servings</h4>
 <div class="container">
   <ul class="list">
